# ansible-role-motd

./: .example.envrc  .pre-commit-config.yaml  HEADER.md  README.md  pyproject.toml
.github/workflows/: ci.yml
defaults/: main.yml
handlers/: main.yml
meta/: argument_specs.yml  badges.yml  main.yml
molecule/default/: converge.yml  molecule.yml
tasks/: main.yml
templates/: motd.service.j2  motd.sh.j2  motd.timer.j2
