[project]
name = "ansible-role-motd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible",
]

[dependency-groups]
dev = [
    "ansible-dev-tools",
    "ansible-doctor",
    "molecule",
    "molecule-plugins[podman]",
    "pre-commit",
]
